--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,14 @@
 [package]
 name = "rmatrix"
 version = "0.1.0"
-authors = ["mov-rax-rbx <73437427+mov-rax-rbx@users.noreply.github.com>"]
+authors = ["mov-rax-rbx"]
 edition = "2018"
+keywords = ["matrix", "rain"]
+categories = ["command-line-utilities"]
+description = "Terminal `matrix` rain."
+readme = "README.md"
+repository = "https://github.com/mov-rax-rbx/rmatrix"
+license = "MIT"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
