--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ keywords = ["matrix", "rain"]
 categories = ["command-line-utilities"]
 description = "Terminal `matrix` rain."
 readme = "README.md"
-repository = "https://github.com/mov-rax-rbx/rmatrix"
+repository = "https://github.com/mov-rax-rbx/rsmatrix"
 license = "MIT"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
